@@ -1,8 +1,8 @@
 cmake_minimum_required (VERSION 2.6)
 
 project (miniupnpc C)
-set (MINIUPNPC_VERSION 1.7)
-set (MINIUPNPC_API_VERSION 9)
+set (MINIUPNPC_VERSION 1.9)
+set (MINIUPNPC_API_VERSION 10)
 
 if (NOT CMAKE_BUILD_TYPE)
   if (WIN32)
