@@ -1,5 +1,9 @@
-$Id: Changelog.txt,v 1.189 2013/10/07 10:04:55 nanard Exp $
+$Id: Changelog.txt,v 1.191 2014/01/31 13:18:24 nanard Exp $
 miniUPnP client Changelog.
+
+2014/01/31:
+  added argument remoteHost to UPNP_GetSpecificPortMappingEntry()
+  increment API_VERSION to 10
 
 2013/12/09:
   --help and -h arguments in upnpc.c
